2009-12-30  Peter Bloomfield

	* src/sendmsg-window.c (create_lang_menu): use
	enchant_broker_dict_exists() to check languages.

2009-12-29  Pawel Salek

	* libbalsa/rfc3156.c:
	* src/main-window.c: add comments to aid translations...
	* src/sendmsg-window.c: ... to fix bug 605435.

2009-12-29  Peter Bloomfield

	* libbalsa/html.c (lbh_resource_request_starting_cb),
	(lbh_new_window_policy_decision_requested_cb),
	(libbalsa_html_new): use "notify::progress" signal instead of
	deprecated "load-progress-changed"; use
	"new-window-policy-decision-requested" signal to more carefully
	control new windows.

2009-12-29  Peter Bloomfield

	* configure.in: require webkitgtk version 1.1.14 or newer.
	* libbalsa/html.c (lbh_resource_request_starting_cb),
	(libbalsa_html_new): use WebKitwebView's
	"resource-request-starting" signal to handle cid: requests and
	disable all others.
	* libbalsa/body.c (libbalsa_message_body_save_temporary): use
	body->filename in preference to content_id.
	* libbalsa/body.h: remove now redundant functions.
	* libbalsa/message.c: ditto.
	* libbalsa/message.h: ditto.

2009-12-26  Peter Bloomfield

	* libbalsa/html.c (lbh_filter_src), (libbalsa_html_new),
	(libbalsa_html_url_requested): implement two ways of handling
	cid: URLs in WebKitwebView.

2009-12-26  Peter Bloomfield

	* libbalsa/message.h: add tempdir member and new methods.
	* libbalsa/message.c (libbalsa_message_finalize),
	(libbalsa_message_get_part_by_id),
	(libbalsa_message_save_parts_by_id),
	(libbalsa_message_has_cid_part), (libbalsa_message_get_tempdir):
	implement and use them.

2009-12-26  Peter Bloomfield

	* libbalsa/libbalsa.h: new error code.

2009-12-20  Peter Bloomfield

	* libbalsa/body.h: new member LibBalsaMessageBody::own_dir, TRUE
	if the temporary file for the body is in its own temporary
	directory/
	* libbalsa/body.c (libbalsa_message_body_new),
	(libbalsa_message_body_free),
	(libbalsa_message_body_save_temporary): if the body has a